--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
         </ul>
       </div> <!-- main-menu-wrapper -->
       
-      <div id="present-location">
-      </div>
     </header>
+        <div id="present-location">
+          こちらは模写したwebサイトです。
+          <a href="https://haniwaman.com/sample/part3/template_08/index.html">参考サイトはこちら</a>（<a href="https://haniwaman.com/">はにわまん様</a>
+          の作成されたサンプルです）
+        </div>
 
 
     <div id="container-main">
